--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="lets_minimize_it">Let\'s Minimize It!</string>
     <string name="method_of_entering_minterms">Separate each minterm with a space or a comma.</string>
     <string name="your_simplified_literals">Ta Daaa! Here\'re Your Simplified Literals.</string>
+    <string name="welcome_to_minterm_minimiza_app">Welcome to Minterm Minimiza app.\nEnjoy Simplifying!</string>
+    <string name="by_ahmed_hussein_bassam_aiman">By Ahmed Hussein | Bassam Aiman</string>
 </resources>
